@@ -1,6 +1,7 @@
 ﻿===== Smarty 3.1-DEV  =====
 05/06/2011
 - update of SMARTY_VERSION
+- bugfix made getTags() working again
 
 04/06/2011
 - allow extends resource in file attribute of {extends} tag
